--- a/docs/hpc/12_tutorial_intro_shell_hpc/02_connecting_to_hpc.mdx
+++ b/docs/hpc/12_tutorial_intro_shell_hpc/02_connecting_to_hpc.mdx
@@ -42,7 +42,7 @@ ssh <NetID>@login.torch.hpc.nyu.edu
 ```
 
 ### From Windows
-Windows users will need to use PuTTY, please see the [NYU instructions](https://www.nyu.edu/employees/resources-and-services/media-and-communications/digital-communications/web-guide/website-development/tutorials/making-your-initial-connection/connecting-with-putty.html).
+Windows users will need to use PuTTY, please see the [instructions](https://services.rt.nyu.edu/docs/hpc/connecting_to_hpc/connecting_to_hpc/#windows-1).
 
 
 ## Opening a Terminal
