--- a/docs/hpc/03_storage/01_intro_and_data_management.mdx
+++ b/docs/hpc/03_storage/01_intro_and_data_management.mdx
@@ -40,7 +40,7 @@ The HPC scratch an all flash (VAST) file-system where most of the users store re
 :::warning[Scratch Purging Policy]
 -   Files on the /scratch file-system that have not been accessed for 60 or more days will be purged.
 0 There are no backups of the scratch file-system. Files that were deleted accidentally or removed due to storage system failures CANNOT be recovered.
--    It is a policy violation to use scripts to change the file access time.</ins> Any user found to be violating this policy will have their HPC account locked. A second violation may result in your HPC account being turned off.
+-    It is a policy violation to use scripts to change the file access time. Any user found to be violating this policy will have their HPC account locked. A second violation may result in your HPC account being turned off.
 :::
 
 :::tip
