link to library guide

--- a/docs/hpc/03_storage/01_intro_and_data_management.mdx
+++ b/docs/hpc/03_storage/01_intro_and_data_management.mdx
@@ -1,6 +1,6 @@
 # HPC Storage
 
-The NYU HPC Environment provides access to a number of file-systems to better serve the needs of researchers managing data during the various stages of the research data life cycle (data capture, analysis, archiving, etc.). Each HPC file-system comes with different features, policies, and availability.  
+The NYU HPC Environment provides access to a number of file-systems to better serve the needs of researchers managing data during the various stages of the [research data life cycle](https://guides.nyu.edu/dataservices#s-lg-box-33756318). Each HPC file-system comes with different features, policies, and availability.  
 
 Numerous data management tools are available that enable data transfers and data sharing, recommended best practices, and various scenarios and use cases of managing data in the HPC Environment. We strongly recommend [`globus`](./03_globus.md) as the primary data transfer tool.
 
