anything that is not high risk is okay on hpc, no need to state the same thing two ways

--- a/docs/hpc/03_storage/01_intro_and_data_management.mdx
+++ b/docs/hpc/03_storage/01_intro_and_data_management.mdx
@@ -3,9 +3,8 @@
 The HPC Environment provides access to a number of file-systems to better serve the needs of researchers managing data during the various stages of the [research data life cycle](https://guides.nyu.edu/dataservices#s-lg-box-33756318). Each HPC file-system comes with different features, policies, and availability. Numerous data management tools are available that enable data transfers and data sharing, recommended best practices, and various scenarios and use cases of managing data in the HPC Environment. We strongly recommend [`globus`](./03_globus.md) as the primary data transfer tool.
 
 :::warning[Only approved for Moderate Risk Data]
--   The HPC Environment has been approved for storing and analyzing **Moderate Risk** research data, as defined in the [NYU Electronic Data and System Risk Classification Policy](https://www.nyu.edu/about/policies-guidelines-compliance/policies-and-guidelines/electronic-data-and-system-risk-classification.html). 
 -   **High Risk** research data, such as those that include Personal Identifiable Information (**PII**) or electronic Protected Health Information (**ePHI**) or Controlled Unclassified Information (**CUI**) **should NOT be stored in the HPC Environment**. For this, we recommend using the [Secure Research Data Environments (SRDE)](../../srde/01_getting_started/01_intro.md) instead.
--   The Office of Sponsored Projects (OSP) and Global Office of Information Security (GOIS) are exclusively empowered to classify the risk categories of data.
+-   The Office of Sponsored Projects (OSP) and Global Office of Information Security (GOIS) are exclusively empowered to classify the risk categories. These are defined in the [NYU Electronic Data and System Risk Classification Policy](https://www.nyu.edu/about/policies-guidelines-compliance/policies-and-guidelines/electronic-data-and-system-risk-classification.html).
 :::
 
 Below is a list of file-systems with their characteristics and a summary table. Reviewing the list of available file-systems and the various scenarios/use cases that are presented below, can help you in selecting the right file-systems for your research project. Please note that there are strict limits on the size and number of files you are allowed to have on each filesystem. To find out your current disk space, inode quota utilization and the distribution of files under your scratch directory, refer to the section on [understanding user quota Limits and the myquota command.](./05_best_practices.md#user-quota-limits-and-the-myquota-command)
