--- a/docs/hpc/03_storage/01_intro_and_data_management.mdx
+++ b/docs/hpc/03_storage/01_intro_and_data_management.mdx
@@ -1,13 +1,11 @@
 # HPC Storage
 
-The HPC environment provides access to various file-systems to better serve your needs for  managing data during all stages of the [research data life cycle](https://guides.nyu.edu/dataservices#s-lg-box-33756318). Each HPC file-system comes with different features, policies, and availability. Numerous data management tools are available for data sharing and data transfers (though we strongly recommend using [`globus`](./03_globus.md)).
-
 :::warning[Only approved for Moderate Risk Data]
--   **High Risk** research data, such as those that include Personal Identifiable Information (**PII**) or electronic Protected Health Information (**ePHI**) or Controlled Unclassified Information (**CUI**) **should NOT be stored in the HPC Environment**. For this, we recommend using the [Secure Research Data Environments (SRDE)](../../srde/01_getting_started/01_intro.md) instead.
+-   High Risk data, such as those that include Personal Identifiable Information (PII) or electronic Protected Health Information (ePHI) or Controlled Unclassified Information (CUI) **should NOT be stored in the HPC Environment**. We recommend using the [Secure Research Data Environments (SRDE)](../../srde/01_getting_started/01_intro.md) instead for this.
 -   The Office of Sponsored Projects (OSP) & Global Office of Information Security (GOIS) are exclusively empowered to classify the risk categories for a dataset as listed in the [NYU Electronic Data and System Risk Classification Policy](https://www.nyu.edu/about/policies-guidelines-compliance/policies-and-guidelines/electronic-data-and-system-risk-classification.html).
 :::
 
-All available file-systems are listed below followed by a table comparing their differences. Reviewing the list of available file-systems and their intended uses can help you in selecting the right file-system for your research project. Please note that there are strict limits on the size and number of files you are allowed to have on each filesystem. To find out your current disk space & inode quota utilization alongside the distribution of files within your directories, refer to the section on [understanding user quota Limits and the myquota command.](./05_best_practices.md#user-quota-limits-and-the-myquota-command)
+The HPC environment provides access to the file-systems listed below to better serve your needs for managing research data during all stages of the [research data life cycle](https://guides.nyu.edu/dataservices#s-lg-box-33756318). Reviewing the list of available file-systems and their intended uses can help you in selecting the right file-system for your tasks. Please note that there are strict limits on the size and number of files you are allowed to have on each filesystem. To find out your current disk space & inode quota utilization refer to the section on [understanding user quota limits.](./05_best_practices.md#user-quota-limits-and-the-myquota-command)
 
 ## User Home Directories
 You have access to a home directory at `/home/$USER` (accessible via the environment variable `$HOME`) for permanently storing code and important configuration files. Home Directories provide limited storage space (**50 GB**) and inodes (files) capacity **30,000**. You can check your quota utilization using the [myquota](http://www.info-ren.org/projects/ckp/tech/software/version/myquota.html) command. Home directories are backed up daily and old files under `$HOME` are not purged. Home directories are available on every cluster node (login nodes, compute nodes) as well as and the Data Transfer Node (gDTN).
