per reviewer comment

--- a/docs/hpc/03_storage/01_intro_and_data_management.mdx
+++ b/docs/hpc/03_storage/01_intro_and_data_management.mdx
@@ -8,7 +8,7 @@
 The HPC environment provides access to the file-systems listed below to better serve your needs for managing research data during all stages of the [research data life cycle](https://guides.nyu.edu/dataservices#s-lg-box-33756318). Reviewing the list of available file-systems and their intended uses can help you in selecting the right file-system for your tasks. Please note that there are strict limits on the size and number of files you are allowed to have on each filesystem. To find out your current disk space & inode quota utilization refer to the section on [understanding user quota limits.](./05_best_practices.md#user-quota-limits-and-the-myquota-command)
 
 ## User Home Directories
-You have access to a home directory at `/home/$USER` (accessible via the environment variable `$HOME`) for permanently storing code and important configuration files. Home Directories provide limited storage space (**50 GB**) and inodes (files) capacity **30,000**. You can check your quota utilization using the `myquota`command as [described here](./05_best_practices.md#user-quota-limits-and-the-myquota-command). Home directories are backed up daily and old files under `$HOME` are not purged. Home directories are available on every cluster node (login nodes, compute nodes) as well as and the Data Transfer Node (gDTN).
+You have access to a home directory at `/home/$USER` (accessible via the environment variable `$HOME`) for permanently storing code and important configuration files. Home Directories provide limited storage space (**50 GB**) and inodes (files) capacity **30,000**. You can check your quota utilization using the `myquota`command as [described here](./05_best_practices.md#user-quota-limits-and-the-myquota-command). Home directories are backed up daily and old files under `$HOME` are not purged. Home directories are available on every cluster node (login nodes, compute nodes) and the Data Transfer Node (gDTN).
 
 :::warning
 Avoid changing file and directory permissions in your home directory to allow other users to access files.
