no need for an ssh keys section anymore

--- a/docs/hpc/01_getting_started/03_walkthrough_request_hpc_account.mdx
+++ b/docs/hpc/01_getting_started/03_walkthrough_request_hpc_account.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 # How to request an HPC account
 
 :::tip
-Make sure you don't already have an HPC account. You can check this by attempting to log in to the cluster, according to the instructions at [Connecting to the HPC Cluster](../02_connecting_to_hpc/01_connecting_to_hpc.md).
+Make sure you don't already have an HPC account. You can check this by attempting to log in to the cluster, according to the instructions at [Connecting to the HPC Cluster](../02_connecting_to_hpc/01_connecting_to_hpc.mdx).
 :::
 
 Login to the URL given below, using your NetID/password, to create or manage HPC Account Requests:
