--- a/docs/hpc/02_connecting_to_hpc/01_connecting_to_hpc.mdx
+++ b/docs/hpc/02_connecting_to_hpc/01_connecting_to_hpc.mdx
@@ -33,6 +33,12 @@ Host torch login.torch.hpc.nyu.edu
   UserKnownHostsFile /dev/null
   LogLevel ERROR
 ```
+
+:::warning[No SSH Keys on Torch]
+SSH keys are not supported on Torch due to increased security resrtictions.
+:::
+
+
 ### MacOS/Linux
 
 MacOS/Linux machines have SSH clients pre-installed. Using the editor of your choice, open the `~/.ssh/config` file on your machine and add the contents listed above.
@@ -118,19 +124,6 @@ There is an extra layer of security when accessing Torch which is described belo
 ![torch-ssh-2fa-8](static/torch-ssh-2fa-8.png)
 -   Return to terminal and hit Enter
 ![torch-ssh-2fa-9](static/torch-ssh-2fa-9.png)
-
-## SSH Keys for Torch
-:::warning
-SSH keys are not supported on Torch!
-:::
-
-Instead of typing your password every time you need to log in, you can also specify an ssh key.
-
--   Only do that on the computer you trust
--   Generate ssh key pair (terminal in Linux/Mac or cmd/WSL in Windows) [using ssh keygen](https://www.ssh.com/ssh/keygen/)
--   Note the path to ssh key files. Don't share key files with anybody - anybody with this key file can login to your account
--   Log into cluster using regular login/password and then add the content of generated public key file (the one with .pub) to `$HOME/.ssh/authorized_keys` on cluster
--   Next time you will log into cluster no password will be required
 
 
 [nyu vpn link]: https://www.nyu.edu/life/information-technology/infrastructure/network-services/vpn.html
